--- a/snl-booking/app.yaml
+++ b/snl-booking/app.yaml
@@ -1,7 +1,8 @@
 application: snl-booking
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: true
 
 handlers:
 - url: /favicon\.ico
@@ -9,4 +10,4 @@ handlers:
   upload: favicon\.ico
 
 - url: .*
-  script: main.py
+  script: main.app
